# Multiprecision-data-refactoring

./: CMakeLists.txt
test/: CMakeLists.txt  psnr_vs_size.cpp  raw_to_bp.cpp  sirius2_data_reconstructor.cpp  sirius2_data_reconstructor_ec.cpp  sirius2_data_refactor.cpp  sirius2_data_refactor_ec.cpp  test_mgard_ec_mpi.cpp  test_reconstructor_adios2.cpp  test_reconstructor_multitier_adios2.cpp  test_refactor_adios2.cpp  test_refactor_multitier_adios2.cpp
